Update shiny or not
Updated which sprite is shiny vs which one is not.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                       <div class = "sprite_container">
                         <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/94.png" id="poke-sprite-regular" />
                         <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/94.png" id="poke-sprite-shiny" />
-                        <figcaption>Regular Form and Shiny Form</figcaption>
+                        <figcaption>Regular Form (Top) and Shiny Form (Bot)</figcaption>
                       </div>
                       
                       <div class="name_container">
